# rcss-final

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  README.md  docker-compose.yml  plan.md
backend-python/: requirements.txt
backend-python/src/: __init__.py  app.py  domain.py  rcss_adapter.py
backend-python/src/infrastructure/: __init__.py  flask_server.py  mqtt_client.py
backend-python/tests/: __init__.py  test_domain.py  test_rcss_adapter.py
common-cpp/: CMakeLists.txt
common-cpp/include/: game_logic.h  localization.h  messages.h
frontend/: app.js  index.html  style.css
platform-esp32/: CMakeLists.txt  sdkconfig.defaults
platform-esp32/main/: CMakeLists.txt  Kconfig.projbuild  main_esp32.cpp
platform-pc/: CMakeLists.txt  main_pc.cpp
tests/: CMakeLists.txt  test_game_logic.cpp
tests-e2e/: run_full_simulation.py
